# intelligent-workflow-application

./: .editorconfig  .gitignore  AGENT_SETUP.md  ARCHITECTURE.md  BUILD_PLAN.md  CLAUDE.md  GENERATIVE_UI.md  README.md  VISION.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: design-reviewer.md
.claude/commands/: run-checks.md
.github/: dependabot.yml
.github/workflows/: ci.yml  live-tests.yml
.kiro/agents/: workflow-platform.json
.kiro/prompts/: workflow-platform.txt
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260509_1650_0001_initial.py  20260714_0130_0002_trigger_cursors.py  20260718_2100_0004_local_auth.py  20260718_2330_0005_role_vocabulary.py  20260719_2300_0003_users_orgs.py
backend/src/workflow_platform/: catalog.py  events.py  main.py  orchestrator.py  scaffold.py  templates.py
backend/src/workflow_platform/agent/: __init__.py  agent.py  registry.py
backend/src/workflow_platform/api/: auth.py  dev.py  organizations.py  users.py  workflows.py  ws.py
backend/src/workflow_platform/auth/: __init__.py  bootstrap.py  identity.py  local.py  middleware.py  oidc.py  passwords.py  provisioning.py  rbac.py  scope.py
backend/src/workflow_platform/bedrock/: __init__.py  client.py
backend/src/workflow_platform/connectors/: __init__.py  base.py  registry.py  s3.py  webhook.py
backend/src/workflow_platform/connectors/browser/: __init__.py  base.py  models.py  playwright_connector.py
backend/src/workflow_platform/connectors/email/: __init__.py  base.py  bootstrap.py  gmail.py  gmail_auth.py  models.py
backend/src/workflow_platform/cost/: __init__.py  pricing.py  report.py
backend/src/workflow_platform/engine/: __init__.py  context.py  executor.py  functions.py  registry.py
backend/src/workflow_platform/evals/: __init__.py  scaffold_eval.py
backend/src/workflow_platform/memory/: __init__.py  learned.py  manager.py
backend/src/workflow_platform/monitoring/: __init__.py  service.py
backend/src/workflow_platform/observability/: __init__.py  error_capture.py  logging.py  metrics.py
backend/src/workflow_platform/persistence/: __init__.py  db.py  memory.py  models.py  postgres.py  repository.py  sqlalchemy_models.py
backend/src/workflow_platform/secrets/: __init__.py  store.py
backend/src/workflow_platform/security/: __init__.py  capabilities.py
backend/src/workflow_platform/tools/: __init__.py  base.py  browser.py  connectors.py  email.py  escalation.py  filesystem.py  image_ocr.py  pdf_extract.py
backend/src/workflow_platform/triggers/: __init__.py  base.py  filesystem.py  gmail_poll.py  schedule.py  webhook.py
backend/src/workflow_platform/workflow/: __init__.py  definition.py  loader.py  topology.py  validation.py
backend/src/workflow_platform/world/: __init__.py  base.py  mock.py  real.py
backend/tests/: _bedrock_fakes.py  _browser_fakes.py  _email_fakes.py  conftest.py  test_agent.py  test_auth.py  test_auth_local.py  test_bedrock_client.py  test_browser_live.py  test_browser_models.py  test_browser_table_parser.py  test_browser_tools.py  test_browser_workflow_functions.py  test_capabilities.py  test_capabilities_endpoint.py  test_capability_enforcement.py  test_catalog_endpoint.py  test_conditional_edges.py  test_connector_tools.py  test_connectors.py  test_cost_estimate.py  test_cost_metering.py  test_definition_serialization.py  test_delete_workflow_endpoint.py  test_dev_errors.py  test_dmarc_ingest.py  test_dry_run.py  test_e2e_workflow.py  test_email_bootstrap.py  test_email_models.py  test_email_tools.py  test_email_triage_apply.py  test_email_triage_workflow.py  test_engine.py  test_engine_browser_integration.py  test_engine_fork.py  test_escalation.py  test_example_workflows.py  test_explain_step.py  test_filesystem_tools.py  (+51 more)
backend/tools/: backfill_learned_memory.py  create_user.py  eval_scaffold.py  fetch_dmarc.py  fetch_gmail_inbox.py  fire.py  gmail_auth.py  judge_email_triage.py  label_from_ground_truth.py  migrate_learned_namespace.py  probe_rpa.py  reclassify_triage.py  replay.py  review_triage.py  run_email_triage_batch.py  seed_outcomes.py  setup_triage_labels.py  smoke_gmail.py  smoke_live.py
docs/: AGENT_MEMORY_RESEARCH_NOTES.md  AGENT_SETUP.md  ARCHITECTURE.md  AUTH_PLAN.md  BEDROCK_SETUP.md  BROWSER_CONNECTOR_PLAN.md  BUILD_PLAN.md  CANVAS_ROADMAP.md  COALA_NOTES.md  DECISIONS.md  EMAIL_CONNECTOR_PLAN.md  EMAIL_TRIAGE_ACT_PLAN.md  IMPLEMENTATION_PLAN.md  INTEGRATIONS.md  LEARNING.md  LEARNING_IMPLEMENTATION.md  MANUAL_TESTING.md  MANUAL_TESTING_C5.md  NEXT_STEPS.md  RAG_PRODUCTION_NOTES.md  RELEASE_READINESS.md  ROLES_PLAN.md  SEMANTICS.md  TESTING.md  UI_POLISH_AND_A11Y.md  USE_CASES.md  VISION.md  WORKFLOW_CANVAS.md
docs/assets/: generate_logo.py
docs/product/: COMPETITIVE_LANDSCAPE.md  GAP_ANALYSIS.md  LLM_EVAL_FRAMEWORK.md  LLM_EVAL_TEST_SUITE.md  OPPORTUNITY.md  POSITIONING_AGENTS_VS_RULES.md  PRODUCT_SPECIFICATION.md  README.md  VERACIUM_ENHANCEMENTS.md
examples/dmarc_ingest/: workflow.yaml
examples/email_triage/: README.md  agent_memory.md  workflow.yaml  workflow_label_only.yaml
examples/email_triage_apply/: README.md  agent_memory.md  workflow.yaml
examples/email_triage_live/: README.md  agent_memory.md  workflow.yaml
examples/github_pr_triage/: README.md  agent_memory.md  workflow.yaml
examples/invoice_extraction/: README.md  agent_memory.md  workflow-batch.yaml  workflow.yaml
examples/pdf_classifier/: README.md  agent_memory.md  workflow.yaml
examples/research_paper_triage/: README.md  agent_memory.md  (+1 more)
frontend/: .gitignore  README.md  angular.json  index.html  package-lock.json  package.json  playwright.config.ts  proxy.conf.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
infra/: .gitignore  README.md  ecr.tf  ecs.tf  iam.tf  main.tf  networking.tf  outputs.tf  rds.tf  s3.tf  secrets.tf  terraform.tfvars.example  variables.tf
scripts/: review-emails.sh  run-local-be-auth.sh  run-local-be.sh  run-local.sh
shared/: README.md
tools/: README.md
(+146 files in other folders)
