[project]
name = "workflow-platform"
version = "0.0.1"
description = "Intelligent workflow platform — backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "boto3>=1.35",
    "PyMuPDF>=1.24",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17",
    "watchdog>=5.0",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "greenlet>=3.0",
    "pyjwt[crypto]>=2.10",
    "simpleeval>=1.0",
    "croniter>=2.0",
    "PyYAML>=6.0",
    "prometheus-client>=0.21",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
    "types-croniter>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_platform"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
markers = [
    "integration: requires external services (Postgres). Set TEST_DATABASE_URL to run.",
    "live: hits real AWS Bedrock — costs a few cents per run. Set BEDROCK_LIVE=1 to run.",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends/Query/Path/Body etc. are idiomatic in default positions,
# as are project dependency factories that wrap Depends.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "workflow_platform.auth.require_roles",
    "workflow_platform.auth.rbac.require_roles",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["fitz", "pytesseract", "pdf2image", "pdf2image.*", "boto3", "botocore.*", "simpleeval"]
ignore_missing_imports = true
