[project]
name = "workflow-platform"
version = "0.0.1"
description = "Intelligent workflow platform — backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "boto3>=1.43.28",
    "PyMuPDF>=1.24",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17",
    "watchdog>=5.0",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0.50",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "greenlet>=3.5.1",
    "pyjwt[crypto]>=2.13.0",
    "simpleeval>=1.0",
    "croniter>=2.0",
    "PyYAML>=6.0",
    "prometheus-client>=0.21",
    "google-api-python-client>=2.140",
    "google-auth>=2.35",
    "google-auth-oauthlib>=1.2",
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "json-repair>=0.59.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
    "types-croniter>=2.0",
    "schemathesis>=4.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_platform"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
markers = [
    "integration: requires external services (Postgres). Set TEST_DATABASE_URL to run.",
    "live: hits real AWS Bedrock — costs a few cents per run. Set BEDROCK_LIVE=1 to run.",
    "gmail_live: hits the real Gmail account. Free; requires Gate 4 complete. Set GMAIL_LIVE=1 to run.",
    "browser_live: launches real Chromium against the public RPA Challenge OCR site. Free; needs `playwright install chromium`. Set BROWSER_LIVE=1 to run.",
    "schema: schemathesis contract/fuzz validation over the OpenAPI schema (GET endpoints). Free, no AWS. Set SCHEMA_TESTS=1 to run.",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends/Query/Path/Body etc. are idiomatic in default positions,
# as are project dependency factories that wrap Depends.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "workflow_platform.auth.require_roles",
    "workflow_platform.auth.rbac.require_roles",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "fitz",
    "pytesseract",
    "pdf2image",
    "pdf2image.*",
    "boto3",
    "botocore.*",
    "simpleeval",
    "googleapiclient",
    "googleapiclient.*",
    "google.auth.*",
    "google.oauth2",
    "google.oauth2.*",
    "google_auth_oauthlib",
    "google_auth_oauthlib.*",
    "playwright",
    "playwright.*",
    "bs4",
    "bs4.*",
]
ignore_missing_imports = true
